--- a/assets/css/lanyon.css
+++ b/assets/css/lanyon.css
@@ -127,6 +127,16 @@ h1, h2, h3, h4, h5, h6 {
   .masthead-title small {
     display: none;
   }
+  
+  .masthead {
+ 
+  
+ 
+ background-size: 337px 66px;
+ background-position:right top;	 
+  
+}
+  
 }
 
 
