--- a/assets/css/lanyon.css
+++ b/assets/css/lanyon.css
@@ -133,7 +133,7 @@ h1, h2, h3, h4, h5, h6 {
   
  
  background-size: 337px 66px;
- background-position:right top;	 
+ background-position:right -72px top 0px;	 
   
 }
   
